--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend_react",
-  "homepage": "https://simanam.github.io/frontend_react",
+  "homepage": "https://simanam.github.io/anamsingh/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
