--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Aman Singh Portfolio",
+  "name": "Aman Singh Portfolio UX/UI Designer and front-end Developer",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon.svg",
+      "sizes": "",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logoA2.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": ""
     },
     {
-      "src": "logo512.png",
+      "src": "logoA2.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": ""
     }
   ],
   "start_url": ".",
